# graphrag-workflow-falkordb-langchain

./: .gitignore  ARCHITECTURE.md  DOCUMENTATION.md  Implement GraphRAG with FalkorDB, LangChain & LangGraph.html  Implement GraphRAG with FalkorDB, LangChain & LangGraph.url  README.md  docker-compose.yml  pyproject.toml
Implement GraphRAG with FalkorDB, LangChain & LangGraph_files/: 144055056.js.download  8433713.js.download  b9b1d7b2ed056.js.download  banner.js.download  collectedforms.js.download  gtm.js.download  js  js(1)  lftracker_v1_ywVkO4XoNvx7Z6Bj.js.download  lt-v3.js.download  reo.js.download  saved_resource(1).html  saved_resource(2).html  saved_resource(3).html  saved_resource(4).html  saved_resource.html  ud2lcjxu9i
data/: .~lock.imdb_top_1000.csv#
src/: graphrag.py
