[project]
name = "graphrag-falkordb-langchain"
version = "0.1.0"
description = "A GraphRAG workflow implementation with FalkorDB, LangChain, and LangGraph."
authors = [
    {name = "Jatinder Bali", email = "jpsbalisubs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
	"falkordb==1.6.0",
	"langchain==1.2.10",
	"langgraph==1.0.10",
	"langchain_openai==1.1.10",
	"langchain_community==0.4.1",
	"beautifulsoup4==4.14.3",
	"pandas==3.0.1",
	"python-dotenv==1.2.2",
	"ipython==9.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[project.scripts]
graphrag = "src.graphrag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]